--- a/.env.dist
+++ b/.env.dist
@@ -13,5 +13,5 @@ APP_SECRET=5adeec77a6d06d7c9e834b449f4f5cec
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:@127.0.0.1:3306/fos_user_testing
 ###< doctrine/doctrine-bundle ###
